src/app/app.scss
// http://ionicframework.com/docs/theming/

// App Global Sass
// --------------------------------------------------
// Put style rules here that you want to apply globally. These
// styles are for the entire app and not just one component.
// Additionally, this file can be also used as an entry point
// to import other Sass files to be included in the output CSS.
//
// Shared Sass variables, which can be used to adjust Ionic's
// default Sass variables, belong in "theme/variables.scss".
//
// To declare rules for a specific mode, create a child rule
// for the .md, .ios, or .wp mode classes. The mode class is
// automatically applied to the <body> element in the app.

.toolbar-title {
  font-family: $custom-header-font;
  font-size: 1.8em;
}

.scroll-content {
  background-color: #ebebeb !important;
}

.menu-label {
  font-family: $custom-label-font;
  font-size: 1.8em;
  color: #5a5a5a;
}

.card-md p,
.card-ios p {
  padding-top: 5px;
  padding-bottom: 5px;
  line-height: 1.7em;
}

ion-card img {
  margin-bottom: 8px;
}

h2 {
  font-family: $custom-header-font;
  font-weight: 100;
  color: $custom-base-clr !important;
  font-size: 2.8rem !important;
}

h3 {
  font-family: $custom-header-font;
  font-weight: 100;
  color: $custom-base-clr !important;
  font-size: 2.6rem !important;
}

